cabal-version:       2.4
name:                ghc-tags-plugin
version:             0.1.1.0
synopsis:            A compiler plugin which generates tags file from GHC syntax tree.
description:
  A compiler source plugin which takes parsed Haskell syntax tree and saves
  tags file to disk, leaving the parsed tree untouched.
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
copyright:           (c) 2020, Marcin Szamotulski
category:            Development
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/coot/ghc-tags-plugin#readme
bug-reports:         https://github.com/coot/ghc-tags-plugin/issues

source-repository head
  type:     git
  location: https://github.com/coot/ghc-tags-plugin

library
  hs-source-dirs:      src
  exposed-modules:     Plugin.GhcTags
  build-depends:       base         ^>=4.12.0.0,
                       containers   ^>=0.6,
                       directory    ^>=1.3,
                       bytestring   ^>=0.10,
                       ghc           >=8.4 && <8.9,

                       ghc-tags-plugin-library

  default-language:    Haskell2010
  ghc-options:         -Wall

library ghc-tags-plugin-library
  hs-source-dirs:      lib
  exposed-modules:     Plugin.GhcTags.Generate
                       Plugin.GhcTags.Parser
                       Plugin.GhcTags.Vim
                       Paths_ghc_tags_plugin
  autogen-modules:     Paths_ghc_tags_plugin
  build-depends:       base         ^>=4.12.0.0,
                       attoparsec   ^>=0.13.0.0,
                       containers   ^>=0.6,
                       directory    ^>=1.3,
                       bytestring   ^>=0.10,
                       gitrev       ^>=1.3,
                       gitrev       ^>=1.3,
                       ghc           >=8.4 && <8.9
  default-language:    Haskell2010
  ghc-options:         -Wall
