cabal-version:       2.4
name:                ghc-tags-core
version:             0.3.1.1
synopsis:            a library to work with tags created from Haskell parsed tree
description:
  === library scope
  .
  'ghc-tags-core' library provides:
  .
  *  a function to extract /tag/ information from @'HsModule' 'GhcPs'@ parsed tree representation of Haskell code
  * parsers __ctag__ and __etag__ style tag files (/vim/ \/ /emacs/)
  * formatting tags into __ctag__ and __etag__ files.
  * tries to be compatible with [universal-ctags](https://github.com/universal-ctags/ctags)
  .
  === developer tools
  Check out these projects:
  .
  * [ghc-tags-plugin](https://hackage.haskell.org/package/ghc-tags-plugin) -
    a ghc [compiler
    plugin](https://ghc.gitlab.haskell.org/ghc/doc/users_guide/extending_ghc.html?highlight=compiler%20plugin#compiler-plugins)
    which extracts tags during @GHC@'s parser pass
  * more to come!
  .
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          coot@coot.me
copyright:           (c) 2020-2022, Marcin Szamotulski
category:            Development
stability:           experimental
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/coot/ghc-tags-plugin/tree/master/ghc-tags-core
bug-reports:         https://github.com/coot/ghc-tags-plugin/issues
tested-with:         GHC==8.8.4, GHC==8.10.7, GHC==9.0.1, GHC==9.2.4, GHC==9.4.2


library
  hs-source-dirs:      lib
  exposed-modules:     GhcTags
                       GhcTags.Ghc
                       GhcTags.Tag
                       GhcTags.Stream
                       GhcTags.CTag
                       GhcTags.CTag.Header
                       GhcTags.CTag.Parser
                       GhcTags.CTag.Formatter
                       GhcTags.CTag.Utils
                       GhcTags.ETag
                       GhcTags.ETag.Parser
                       GhcTags.ETag.Formatter
  other-modules:       GhcTags.Utils
  build-depends:       attoparsec           >=0.13.0.0,
                       base                 >=4.12.0.0 && <4.18,
                       bytestring           >=0.10,
                       directory           ^>=1.3,
                       filepath-bytestring ^>=1.4,
                       ghc                  >=8.4 && <10,
                       mtl                 ^>=2.2,
                       pipes               ^>=4.3,
                       pipes-attoparsec    ^>=0.5,
                       pipes-bytestring    ^>=2.1,
                       text                 >=1.2 && <2.1,
                       transformers

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -- the following three warnings are enabled by -Wall in
                       -- ghc-9.2
                       -Wno-incomplete-uni-patterns
                       -Wno-incomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
  if impl(ghc < 8.10)
    build-tool-depends: cpphs:cpphs >=1.20
    ghc-options:       -pgmP cpphs
                       -optP --cpp


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Golden.Parser
                       Test.Tag
                       Test.Tag.Generators
                       Test.CTag
                       Test.ETag
  default-language:    Haskell2010      
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       directory,
                       filepath,
                       filepath-bytestring,
                       lattices,
                       mtl,
                       pipes,
                       QuickCheck,
                       quickcheck-instances,
                       tasty,
                       tasty-golden,
                       tasty-quickcheck,
                       text,

                       ghc-tags-core
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wno-incomplete-uni-patterns
                       -Wno-incomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints

benchmark benchmark
  hs-source-dirs:      bench
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , criterion
                     , deepseq
                     , filepath-bytestring
                     , ghc-tags-core
                     , mtl
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , text
  ghc-options:         -Wall -rtsopts

