cabal-version:       3.0
name:                ghc-tags-core
version:             0.6.1.1
synopsis:            CTags and ETags from Haskell syntax tree.
description:         A library to work with tags created from GHC syntax tree.
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          coot@coot.me
copyright:           (c) 2020-2024, Marcin Szamotulski
category:            Development
stability:           experimental
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/coot/ghc-tags-plugin#readme
bug-reports:         https://github.com/coot/ghc-tags-plugin/issues
tested-with:         GHC == { 9.6, 9.8, 9.10 }

flag ghc-lib
  default: False
  manual:  True
  description: Use ghc-lib rather than ghc

common warnings
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -- the following three warnings are enabled by -Wall in
                       -- ghc-9.2
                       -Wno-incomplete-uni-patterns
                       -Wno-incomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
  if impl(ghc >= 9)
    ghc-options:       -Wunused-packages

library
  import:              warnings
  hs-source-dirs:      lib
  exposed-modules:     GhcTags
                       GhcTags.Ghc
                       GhcTags.Tag
                       GhcTags.CTag
                       GhcTags.CTag.Header
                       GhcTags.CTag.Parser
                       GhcTags.CTag.Formatter
                       GhcTags.CTag.Utils
                       GhcTags.ETag
                       GhcTags.ETag.Parser
                       GhcTags.ETag.Formatter
                       GhcTags.Utils
  build-depends:       attoparsec           >=0.14.4,
                       base                 >=4.12.0.0 && <4.21,
                       bytestring           >=0.10,
                       containers,
                       deepseq,
                       text                 >=1.2 && <2.2

  if impl(ghc >= 9.6)
    build-depends: filepath ^>= 1.4.100.1 || ^>= 1.5
  else
    build-depends: filepath-bytestring ^>= 1.4

  if flag(ghc-lib)
    build-depends: ghc-lib
  else
    build-depends: ghc

  if flag(ghc-lib)
    cpp-options: -DMIN_VERSION_GHC(x,y)=MIN_VERSION_ghc_lib(x,y,0)
  else
    cpp-options: -DMIN_VERSION_GHC(x,y)=MIN_VERSION_GLASGOW_HASKELL(x,y,0,0)

  default-language:    Haskell2010
