cabal-version:       2.4
name:                ghc-tags-plugin
version:             0.2.4.0
synopsis:            A compiler plugin which generates tags file from GHC parsed syntax tree.
description:
  A [GHC compiler plugin](https://ghc.gitlab.haskell.org/ghc/doc/users_guide/extending_ghc.html?highlight=compiler%20plugin#compiler-plugins)
  which takes parsed Haskell representation @HsModule GhcPs@,
  extracts __tags__ information and saves it either in __ctags__ or
  __etags__ format.
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
copyright:           (c) 2020, Marcin Szamotulski
category:            Development
stability:           alpha
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/coot/ghc-tags-plugin#readme
bug-reports:         https://github.com/coot/ghc-tags-plugin/issues
tested-with:         GHC==8.6.5, GHC==8.8.3, GHC==8.10.1

-- Don't build gtp-check command by default; it's a development tool.
flag gtp-check
  default: False
  manual:  False

source-repository head
  type:     git
  location: https://github.com/coot/ghc-tags-plugin

library
  hs-source-dirs:      lib
  exposed-modules:     Plugin.GhcTags
                       Plugin.GhcTags.Options
                       Plugin.GhcTags.FileLock
  other-modules:       Plugin.GhcTags.CTag
                       Paths_ghc_tags_plugin
  autogen-modules:     Paths_ghc_tags_plugin
  build-depends:       base              >=4.12.0.0 && <4.15,
                       bytestring       ^>=0.10,
                       directory        ^>=1.3,
                       filepath         ^>=1.4,
                       filepath-bytestring
                                        ^>=1.4,
                       ghc               >=8.4 && <8.11,
                       lukko            ^>=0.1,
                       mtl              ^>=2.2,
                       optparse-applicative
                                        ^>=0.15.1,
                       pipes            ^>=4.3,
                       pipes-attoparsec ^>=0.5,
                       pipes-bytestring ^>=2.1,
                       pipes-safe       ^>=2.3,
                       text             ^>=1.2,

                       ghc-tags-core

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints


executable gtp-check
  if flag(gtp-check)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      app
  main-is:             check.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , directory
                     , filepath

                     , ghc-tags-plugin
