cabal-version:       2.4
name:                ghc-tags-plugin
version:             0.4.0.1
synopsis:            A compiler plugin which generates tags file from GHC parsed syntax tree.
description:
  A [GHC compiler plugin](https://ghc.gitlab.haskell.org/ghc/doc/users_guide/extending_ghc.html?highlight=compiler%20plugin#compiler-plugins)
  which takes parsed Haskell representation @HsModule GhcPs@,
  extracts __tags__ information and saves it either in __ctags__ or
  __etags__ format.
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          coot@coot.me
copyright:           (c) 2020-2022, Marcin Szamotulski
category:            Development
stability:           alpha
extra-source-files:  CHANGELOG.md
                     README.md
homepage:            https://github.com/coot/ghc-tags-plugin#readme
bug-reports:         https://github.com/coot/ghc-tags-plugin/issues
tested-with:         GHC==8.8.4, GHC==8.10.7, GHC==9.0.1, GHC==9.2.4, GHC==9.4.2

-- Don't build gtp-check command by default; it's a development tool.
flag gtp-check
  default: False
  manual:  False

source-repository head
  type:     git
  location: https://github.com/coot/ghc-tags-plugin

library
  hs-source-dirs:      lib
  exposed-modules:     Plugin.GhcTags
                       Plugin.GhcTags.Options
                       Plugin.GhcTags.FileLock
  other-modules:       Plugin.GhcTags.CTag
                       Paths_ghc_tags_plugin
  autogen-modules:     Paths_ghc_tags_plugin
  build-depends:       base              >=4.12.0.0 && <4.18,
                       bytestring        >=0.10 && < 0.12,
                       directory        ^>=1.3,
                       filepath         ^>=1.4,
                       filepath-bytestring
                                        ^>=1.4,
                       ghc               >=8.4 && <10,
                       lukko             >=0.1,
                       mtl              ^>=2.2,
                       optparse-applicative
                                         >=0.15.1 && < 0.17,
                       pipes            ^>=4.3,
                       pipes-attoparsec ^>=0.5,
                       pipes-bytestring ^>=2.1,
                       pipes-safe       ^>=2.3,
                       text              >=1.2 && <2.1,

                       ghc-tags-core

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -- the following three warnings are enabled by -Wall in
                       -- ghc-9.2
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints


executable gtp-check
  if flag(gtp-check)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      app
  main-is:             check.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , directory
                     , filepath

                     , ghc-tags-plugin
